# paper-digest-agent

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  fly.toml  pyproject.toml  requirements.txt
.github/workflows/: daily-digest.yml
docker/: Dockerfile  entrypoint.sh
docs/: _config.yml  index.md
index/: by_date.yaml  by_score.yaml  by_tag.yaml
notifier/: .env.example  pyproject.toml
notifier/src/toslack/: __init__.py  analysis.py  cli.py  config.py  converter.py  models.py  reader.py  scheduler.py  sender.py  server.py  storage.py  topics.py
notifier/web/: package-lock.json  package.json
notifier/web/src/: app.css
notifier/web/src/lib/: index.ts
notifier/web/src/lib/components/: ArxivExtractor.svelte  CommentSection.svelte  DateSelector.svelte  ManualInput.svelte  PaperCard.svelte  PipelineStatus.svelte  Sidebar.svelte  SidebarDateList.svelte  SidebarPaperItem.svelte  SidebarTeamDecisions.svelte  TextExtractor.svelte  TopNavBar.svelte  TopicChip.svelte  VoteButton.svelte  VoterList.svelte
notifier/web/src/lib/components/detail/: DeltaSection.svelte  ExtractionSection.svelte  ScoringSection.svelte  VerificationSection.svelte
notifier/web/src/lib/stores/: pipeline.ts  teamVotes.ts  topics.ts  votes.ts
notifier/web/src/lib/types/: paperDetail.ts
notifier/web/src/routes/: +layout.svelte  +page.svelte
notifier/web/src/routes/add/: +page.svelte
notifier/web/src/routes/paper/[arxivId]/: +page.svelte
notifier/web/src/routes/topics/: +page.svelte
papers/: 2026-01-31.yaml  2026-02-10.yaml  2026-02-11.yaml  2026-02-12.yaml  2026-02-13.yaml
reports/2305.10601-tree-of-thoughts-deliberate-pr/: deep.md  delta.json  extraction.json  scoring.json  verification.json
reports/2601.20833-idea2story-an-automated-pipeli/: deep.md  delta.json  extraction.json  scoring.json  verification.json
reports/2601.21181-mad-modalityadaptive-decoding/: deep.md  delta.json  extraction.json  scoring.json  verification.json
reports/2601.21590-scalable-power-sampling-unlock/: deep.md  delta.json  extraction.json  scoring.json  (+1 more)
(+127 files in other folders)
