[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paper-digest-agent"
version = "0.1.0"
description = "Daily paper digest agent - LLM/Agent 논문 트렌드 분석 파이프라인"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.2.0",
    "langchain-openai>=0.2.0",
    "langsmith>=0.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "arxiv>=2.1.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pymupdf>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[project.scripts]
rtc = "rtc.pipeline.run_daily:app"

[tool.hatch.build.targets.wheel]
packages = ["src/rtc"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
