[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "toslack"
version = "0.1.0"
description = "Paper Digest Slack Notifier - CLI tool to send daily paper reports to Slack"
license = "CC-BY-NC-4.0"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "tenacity>=8.0.0",
    "fastapi>=0.110.0",
    "python-multipart>=0.0.7",
    "uvicorn>=0.27.0",
    "apscheduler>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[project.scripts]
toslack = "toslack.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/toslack"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
